Fixed horizontal scrollbar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,8 @@ p {
 
 .backgroundContainer {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 98vw;
+    height: 98vh;
     z-index: -1;   /*This is important so that the background is behind everything, else links won't work*/   
 }
 
@@ -104,7 +104,7 @@ p {
     display: inline-block;
     margin-left: 0;
     height: 10%;
-    width: 100%;
+    width: 97%;
     align-items: center;
     box-shadow: 0px 3px 12px -1px rgba(161, 145, 145, 0.75);
     -webkit-box-shadow: 0px 3px 12px -1px rgba(161, 145, 145, 0.75);
